--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "IBM Plex Sans", sans-serif;
+  }
 /* Nav-Bar/Hero Section Starts Here */
 
 /* Nav-Bar/Hero Section Ends Here */
