--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     font-family: "IBM Plex Sans", sans-serif;
   }
+  .container {
+    width: 100%;
+    height: 100vh;
+  }
 /* Nav-Bar/Hero Section Starts Here */
 
 /* Nav-Bar/Hero Section Ends Here */
