--- a/style.css
+++ b/style.css
@@ -25,5 +25,102 @@
 /* Get Started - Trust Wallet App Section Ends Here */
 
 /* Footer Section Starts Here */
+.footer-home-button a{
+  color: rgb(11, 101, 198);
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.6rem;
+}
 
+.footer-section{
+  background-color: rgb(255, 255, 255);
+  padding: 48px 0 48px 0;
+  line-height: 27.2px;
+  display: block;
+}
+.contents{
+  text-align: center;
+}
+.contents h4{
+  letter-spacing: 0.08em;
+  line-height: 1.45rem;
+  font-weight: 700;
+  font-size: 0.95rem;
+}
+
+.footer-home-button {
+  height: 20vh;
+}
+.contents ul{
+  display: block;
+  line-height: 2.6rem;
+
+}
+.contents li{
+  list-style: none;
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+.first-column a,.second-column a,.third-column a,.fourth-column a{
+  text-decoration: none;
+  color:rgb(74, 84, 94);
+}
+.first-column a:hover,.second-column a:hover,.third-column a:hover,.fourth-column a:hover{
+  text-decoration: underline;
+}
+.first-column,.second-column,.third-column,.fourth-column {
+  color:rgb(74, 84, 94);
+}
+/* MEDIA QUERIES STRATS HERE  */
+
+/*  MEDIA QUERY FOR MEDIUM SCREENS */
+@media (min-width:768px) {
+  .footer-home-button a{
+      color: rgb(11, 101, 198);
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 1.6rem;
+      /* width: 2%; */
+  }
+  .contents{
+      text-align: left;
+  }
+ 
+  .first-three-column{
+      display: flex;
+      gap: 4rem;
+      justify-content: center;
+  }
+ .last-two-column{
+  display: flex;
+  margin-left: 18.7rem;
+  gap: 2rem;
+  
+ }
+}
+
+/*  MEDIA QUERY FOR LARGE SCREENS */
+@media (min-width:800px) {
+  
+  .footer-home-button{
+      width: 60%;
+  }
+  .contents{
+      display: flex;
+      gap: 2rem;
+      justify-content: center;
+      padding: 0 1rem;
+      margin: 0 1rem;
+  }
+  .first-three-column{
+      display: flex;
+      justify-content: center;
+  }
+ .last-two-column{
+  display: flex;
+  margin-left: 0;
+  gap: 2rem;
+ }
+ 
+}
 /*  Footer Section Ends Here */
